# dta2pqt

./: .gitignore  Cargo.toml  README.md
.github/workflows/: build_release.yml
src/: cli.rs  concurrency.rs  lib.rs  main.rs  parquet.rs  stata.rs  translate.rs
src/cli/: mod.rs
src/stata/: error.rs  file.rs  values.rs
